# libterminus

./: .coveragerc  .gitignore  .jenkins.yml  .travis.yml  Jenkinsfile  Pipfile  README.md  setup.cfg  tox.ini
messages/terminus/proto/: areas_to_match.proto  core.proto  device_data.proto  recording.proto  recordings_matches.proto  recordings_to_match.proto
requirements/: requirements.in  requirements.txt
scripts/: compile_proto_messages.sh
terminus/: __init__.py  adapter.py  logutils.py  pipeline.py  pubsub_utils.py  schema.py
terminus/proto/: areas_to_match_pb2.py  core_pb2.py  device_data_pb2.py  recording_pb2.py  recordings_matches_pb2.py  recordings_to_match_pb2.py
terminus/utils/: time.py
tests/: conftest.py  test_adapter.py  test_logging.py  test_logutils.py  test_messages.py  test_pipeline.py  test_schema.py  test_time_utils.py  test_utils.py
