[metadata]
name = libterminus
version = 0.10
description = Library that contains a logging adapter and a pipeline
author = Evoniners
author_email = dev@evonove.it
url = https://github.com/whip-live/libterminus
keywords = whip, terminus

[options]
packages = find:
install_requires =
        marshmallow
        PyJWT
        python-logstash
        python-json-logger

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1
